--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "draft-js": "^0.11.7",
     "ethereum-multicall": "^2.12.0",
     "ethers": "^5.6.8",
+    "firebase": "^9.17.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-button-loader": "^2.0.0",
